After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 667826 - rtpsession: Ensure MT safe event handling and plug event leak
rtpsession: Ensure MT safe event handling and plug event leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other All
: Normal normal
: 1.1.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-01-12 22:09 UTC by Håvard Graff (hgr)
Modified: 2013-02-01 11:35 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (1.21 KB, patch)
2012-01-12 22:09 UTC, Håvard Graff (hgr)
committed Details | Review

Description Håvard Graff (hgr) 2012-01-12 22:09:53 UTC
Created attachment 205146 [details] [review]
patch

.
Comment 1 Olivier Crête 2013-01-28 22:45:00 UTC
Committed

commit 86c13ceae6eeefb092d641b6fb54cfa591b653d1
Author: Haakon Sporsheim <haakon.sporsheim@gmail.com>
Date:   Thu Apr 28 22:59:28 2011 +0200

    rtpsession: Ensure MT safe event handling and plug event leak.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=667826
Comment 2 Nicola 2013-01-31 23:33:18 UTC
could this be applied to 0.10 too, thanks!
Comment 3 Olivier Crête 2013-02-01 11:35:27 UTC
Committed to 0.10

commit 2ba9d9472d74908200c839d3001d78a086093259
Author: Haakon Sporsheim <haakon.sporsheim@gmail.com>
Date:   Thu Apr 28 22:59:28 2011 +0200

    rtpsession: Ensure MT safe event handling and plug event leak.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=667826
    
    Also includes the patch from bug #667816