rtpsession: Ensure MT safe event handling and plug event leak.

https://bugzilla.gnome.org/show_bug.cgi?id=667826

Also includes the patch from bug #667816